# iterm2-client

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
proto/: api.proto
src/: app.rs  auth.rs  connection.rs  error.rs  lib.rs  notification.rs  proto.rs  request.rs  session.rs  tab.rs  transport.rs  window.rs
tests/: integration_tests.rs  request_coverage_tests.rs  unit_tests.rs
tests/common/: mock_server.rs
tests/integration/: live_tests.rs  mod.rs
tests/unit/: connection_tests.rs  high_level_tests.rs  mod.rs  notification_tests.rs  request_coverage_tests.rs
