[package]
name = "iterm2-client"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
description = "Rust client for the iTerm2 scripting API (WebSocket + Protobuf)"
license = "GPL-2.0-only"
repository = "https://github.com/caladriuslogic/iterm2-client"
homepage = "https://github.com/caladriuslogic/iterm2-client"
keywords = ["iterm2", "terminal", "macos", "websocket", "protobuf"]
categories = ["api-bindings", "os::macos-apis"]
readme = "README.md"

[dependencies]
futures-util = "0.3"
prost = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["net", "process", "sync", "time", "rt-multi-thread", "macros", "io-util"] }
serde_json = "1"
tokio-tungstenite = "0.26"
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
